main.css
@import url('https://fonts.googleapis.com/css?family=Roboto Mono:200,300,400,500,600,700');
@import url('https://fonts.googleapis.com/css?family=Inter:200,300,400,500,600,700');
@font-face {
    font-family: NewParis;
    src: url(NewParisText-BoldItalic.ttf);
    font-weight: bold;
  }
  


* {
    margin: 0;
    padding: 0;
}


* {
    margin: 0;
    padding: 0;
}

html,

body {
    width: 100%;
    height: 100%;
    background-color: rgb(255, 255, 255);
    text-align: center;

}

.webgl {
    position: fixed;
    top: 0;
    left: 0;
    outline: none;
}

#container {
    width: 100%;
    height: 100%;
    position: block;
    z-index: -5;
}

#nav {
    display: flex;
    position: absolute;
    top: 15px;
    width: 100%;
    justify-content: center;
    gap: 10px;
}

a {
    text-decoration: none;
    color: black;
}

.button {
    display: flex;
    font-size: 14px;
    font-family: 'Roboto Mono';
    font-weight: 500;
    color: rgb(0, 0, 0);
    border: 2px solid black;
    padding: 10px 20px 10px 20px;
    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s; 
}

.button:hover {
    transform: translate(0, -3px);
    cursor: pointer;
    box-shadow: 0px 9px 11px rgba(0, 0, 0, 0.123);
}

.button:active {
    transform: translateY(-2px);
}
#button-active {
    display: flex;
    font-size: 14px;
    font-family: 'Roboto Mono';
    font-weight: 500;
    color: rgb(255, 255, 255);
    background-color: black;
    border: 2px solid black;
    padding: 10px 20px 10px 20px;
    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s; 
}

#button-active:hover {
    transform: translate(0, -3px);
    cursor: pointer;
    box-shadow: 0px 9px 11px rgba(0, 0, 0, 0.123);
}

#button-active:active {
    transform: translateY(-2px);
}

#button-message {
    display: flex;
    font-size: 14px;
    font-family: 'Roboto Mono';
    font-weight: 500;
    color: #0038FF;
    border: 2px solid #0038FF;
    padding: 10px 20px 10px 20px;
    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s; 
}

#button-message:hover {
    transform: translate(0, -3px);
    cursor: pointer;
    box-shadow: 0px 9px 11px rgba(0, 0, 0, 0.123);
}

#button-message:active {
    transform: translateY(-2px);
}

#button-message-active {
    display: flex;
    font-size: 14px;
    font-family: 'Roboto Mono';
    font-weight: 500;
    color: #ffffff;
    background-color: #0038FF;
    border: 2px solid #0038FF;
    padding: 10px 20px 10px 20px;
    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s; 
}

#button-message-active:hover {
    transform: translate(0, -3px);
    cursor: pointer;
    box-shadow: 0px 9px 11px rgba(0, 0, 0, 0.123);
}

#button-message-active:active {
    transform: translateY(-2px);
}



.bottom-text:hover {
    color: rgb(65, 65, 250) !important; 
    cursor: pointer;
}

#dark-mode {
    color: 'black';
    position: absolute;
    font-weight: 500;
    right: 40px;
}

#dark-mode-rectangle {
    position: absolute;
    right: 25px;
    width: 91px;
    height: 20px;
    background: rgba(0, 0, 0, 0.404);
    filter: blur(11px);
}

#dark-mode-rectangle:hover {
    cursor: pointer;
}

#about {
    position: absolute;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    flex-direction: column;
    top: 20%;
    width: 100%;
    height: 500px;
}

#center {
    text-align: left;
    width: 600px;
    display: flex;
    flex-direction: column;
    gap: 60px;
}

.header {
    font-size: 26px;
    font-family: 'Roboto Mono';
    font-weight: 600;
    text-decoration: underline;
    text-underline-offset: 12px;
    text-decoration-thickness: 3px;
}

#text {
    font-family: 'Inter';
    line-height: 30px;
    font-size: 18px;
    color: #323232;
}

#footer {
    font-family: 'Inter';
    font-size: 20px;
    font-weight: 500;
}

#contact {
    color: #0066FF;
    text-decoration: underline;
    text-underline-offset: 6px;
    text-decoration-thickness: 2px;
    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s; 
}

#contact:hover {
    color: #6aa2f7;
}

#message {
    display: flex;
    position: absolute;
    top: 25%;
    width: 100%;
    height: 500px;
    justify-content: center;
    text-align: center;
    align-items: center;
}

#message-container {
    gap: 20px;
    height: 415px;
    width: 500px;
    display: flex;
    flex-direction: column;
    text-align: left;
}

.top-fields {
    margin-top: 15px;
    gap: 15px;
    display: flex;
    flex-direction: column;
}

#from-text {
    font-weight: 500;
    font-size: 12px;
    font-family: 'Roboto Mono';
    color:rgb(0, 0, 0)
}

#from {
    font-family: 'Roboto Mono';
    margin-top: 5px;
    font-size: 14px;
    border: none;
    border: solid 1px rgb(223, 223, 223);
    background-color: rgb(223, 223, 223);
    width: 470px;
    height: 40px;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    outline: none;
    padding-left: 15px;
    padding-right: 15px;
    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s; 
}

#from:hover {
    border: 1px solid rgb(233, 233, 233);
    background-color: rgb(233, 233, 233);

}

#from:focus {
    border: 1px solid rgb(62, 81, 250);
    background-color: rgb(247, 247, 247);

}

#from-dark {
    color: #bebebe;
    font-family: 'Roboto Mono';
    margin-top: 5px;
    font-size: 14px;
    border: none;
    border: solid 1px #1B1B1B;
    background-color: #141414;
    width: 470px;
    height: 40px;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    outline: none;
    padding-left: 15px;
    padding-right: 15px;
    transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s; 
}

#from-dark:hover {
    border: 1px solid #1f1e1e;
    background-color: #0f0f0f;

}

#from-dark:focus {
    border: 1px solid #482EE9;
    background-color: #101010;

}

#subject-text {
    font-weight: 500;
    font-size: 12px;
    font-family: 'Roboto Mono';
    color:rgb(0, 0, 0)
}
/* ... */

